demo : changed js to us embedded resource

--- a/src/screenscrape-website/screenscrape-website.csproj
+++ b/src/screenscrape-website/screenscrape-website.csproj
@@ -82,6 +82,7 @@
     <None Include="screenscrape-website_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Js\flatuicolors.com.js" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
