new winui project version

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 
 /src/screenscape-website-desktop/screenscape-website-desktop (Package)/obj/*
 /src/screenscape-website-desktop/screenscape-website-desktop/obj/*
+/src/screenscrape-website-core/screenscrape-website-core (Package)/bin/*
+/src/screenscrape-website-core/screenscrape-website-core (Package)/obj/*
+/src/screenscrape-website-core/screenscrape-website-core/bin/*
+/src/screenscrape-website-core/screenscrape-website-core/obj/*
