--- a/src/screenscrape-website-core/screenscrape-website-core/screenscrape-website-core.csproj
+++ b/src/screenscrape-website-core/screenscrape-website-core/screenscrape-website-core.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Microsoft.ProjectReunion" Version="0.5.0-prerelease" />
     <PackageReference Include="Microsoft.ProjectReunion.Foundation" Version="0.5.0-prerelease" />
     <PackageReference Include="Microsoft.ProjectReunion.WinUI" Version="0.5.0-prerelease" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
