appshell : added appshell and used for CurrencyConverter

--- a/src/screenscrape-website-core/screenscrape-website-core/screenscrape-website-core.csproj
+++ b/src/screenscrape-website-core/screenscrape-website-core/screenscrape-website-core.csproj
@@ -44,5 +44,8 @@
     <Page Update="CurrencyConverter.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Update="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 </Project>
